test: update Iceberg catalog adapter tests